--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -17,7 +17,7 @@
 
 .card--section {
   position: relative;
-  padding: var(--spacing-l);
+  padding: var(--spacing-m);
 }
 
 .card--reward-total {
@@ -82,7 +82,7 @@
 
 .card__title-section {
   @extend .section__flex;
-  padding: var(--spacing-m) var(--spacing-l);
+  padding: var(--spacing-s) var(--spacing-m);
 
   @media (max-width: $breakpoint-small) {
     padding: 0;
@@ -90,7 +90,7 @@
 }
 
 .card__title-section--body-list {
-  padding: var(--spacing-m);
+  padding: var(--spacing-s);
 
   @media (max-width: $breakpoint-small) {
     padding: 0;
@@ -171,7 +171,7 @@
 .card__title {
   display: block;
   align-items: center;
-  font-size: var(--font-title);
+  font-size: var(--font-large);
   font-weight: var(--font-weight-light);
 
   & > *:not(:last-child) {
@@ -196,8 +196,7 @@
 
 .card__title-actions {
   align-self: flex-start;
-  padding: var(--spacing-m);
-  padding-right: var(--spacing-l);
+  padding: var(--spacing-s);
 
   @media (max-width: $breakpoint-small) {
     padding: 0;
@@ -254,7 +253,7 @@
 }
 
 .card__body {
-  padding: var(--spacing-l);
+  padding: var(--spacing-m);
 
   &:not(.card__body--no-title) {
     padding-top: 0;
@@ -271,9 +270,9 @@
 }
 
 .card__main-actions {
-  padding: var(--spacing-l);
+  padding: var(--spacing-m);
   padding-bottom: 0;
-  margin-bottom: var(--spacing-l);
+  margin-bottom: var(--spacing-m);
   border-top: 1px solid var(--color-border);
 
   &:only-child {
@@ -282,7 +281,7 @@
 }
 
 .card__body-actions {
-  padding: var(--spacing-l);
+  padding: var(--spacing-m);
 
   @media (max-width: $breakpoint-small) {
     padding: var(--spacing-s);
