--- a/ui/scss/component/_form-field.scss
+++ b/ui/scss/component/_form-field.scss
@@ -43,7 +43,7 @@ select {
 }
 
 select {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 96 96' xmlns='http://www.w3.org/2000/svg' fill='%23212529'%3E%3Cpath d='M17.172, 31.172c1.562, -1.562 4.095, -1.562 5.656, 0l25.172, 25.171l25.172, -25.171c1.562, -1.562 4.095, -1.562 5.656, 0c1.562, 1.562 1.562, 4.095 0, 5.656l-28, 28c-1.562, 1.562 -4.095, 1.562 -5.656, 0l-28, -28c-0.781, -0.781 -1.172, -1.805 -1.172, -2.828c0, -1.023 0.391, -2.047 1.172, -2.828Z'/%3E%3C/svg%3E%0A");
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 96 96' xmlns='http://www.w3.org/2000/svg' fill='black'%3E%3Cpath d='M17.172, 31.172c1.562, -1.562 4.095, -1.562 5.656, 0l25.172, 25.171l25.172, -25.171c1.562, -1.562 4.095, -1.562 5.656, 0c1.562, 1.562 1.562, 4.095 0, 5.656l-28, 28c-1.562, 1.562 -4.095, 1.562 -5.656, 0l-28, -28c-0.781, -0.781 -1.172, -1.805 -1.172, -2.828c0, -1.023 0.391, -2.047 1.172, -2.828Z'/%3E%3C/svg%3E%0A");
   background-position: 99% center;
   background-repeat: no-repeat;
   background-size: 1rem;
@@ -213,6 +213,7 @@ input-submit {
     border-left: 2px solid;
     border-bottom: 2px solid;
     border-color: var(--color-input-toggle);
+    border-left-color: var(--color-input-toggle);
     transform: rotate(-45deg);
     left: 6px;
     top: 6px;
@@ -239,7 +240,7 @@ input-submit {
     height: 12px;
     width: 12px;
     border-radius: 50%;
-    background-color: var(--color-secondary);
+    background-color: var(--color-primary);
     left: 6px;
     top: 5px;
   }
@@ -354,7 +355,6 @@ fieldset-group {
         text-overflow: ellipsis;
         overflow: hidden;
         padding: 0.5rem;
-        padding-right: var(--spacing-s);
         height: var(--height-input);
         border: 1px solid;
         border-top-left-radius: var(--border-radius);
