--- a/ui/scss/component/_wunderbar.scss
+++ b/ui/scss/component/_wunderbar.scss
@@ -102,7 +102,7 @@
 
 .wunderbar__suggestion-label {
   overflow: hidden;
-  //   padding-left: var(--spacing-s);
+  padding-left: var(--spacing-s);
   text-overflow: ellipsis;
   white-space: nowrap;
 }
